[package]
name = "hsyst-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.0"
bcrypt = "0.17.0"
jsonwebtoken = "9.3.1"
actix-cors = "0.7.1"
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
actix-rt = "2.8.0"
rusqlite = "0.36"
dotenv = "0.15"